--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "mongoose": "^4.11.0"
+    "mongoose": "^4.11.0",
+    "express-partials": "^0.3.0",
+    "method-override": "^2.3.5",
+    "passport": ">= 0.0.0",
+    "passport-github2": ">= 0.0.0",
+    "router": "^1.1.3"
   }
 }
